mongod shutdown procedure doesn't shutdown the Grid::getExecutorPool()

XMLWordPrintableJSON

    • Sharding EMEA
    • Fully Compatible
    • ALL
    • v6.3, v6.0, v5.0, v4.4
    • Sharding EMEA 2022-07-25, Sharding EMEA 2022-12-26, Sharding EMEA 2023-01-09, Sharding EMEA 2023-01-23, Sharding EMEA 2023-02-06, Sharding EMEA 2023-04-17
    • 35
    • 1
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      This could lead us to some memory leaks.

      Note that the mongos shutdown procedure shutdowns the ExecutorPool.

            Assignee:
            Antonio Fuschetto
            Reporter:
            Sergi Mateo Bellido
            Votes:
            0 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved: